--- a/style.css
+++ b/style.css
@@ -5,3 +5,24 @@
     padding: 0;
     font-family: 'Roboto';
 }
+
+body{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url('./bg.jpg') no-repeat center center/cover;
+    background-size: cover;
+    background-position: top center;
+
+}
+body::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: blur(5px);
+    z-index: -1;
+}
