--- a/style.css
+++ b/style.css
@@ -26,3 +26,18 @@ body::before{
     filter: blur(5px);
     z-index: -1;
 }
+.contact-setion{
+    position: relative;
+    width: 400px;
+    padding: 40px;
+    background: rgba(0,0,0,.7);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.5);
+    border-radius: 10px;
+}
+.contact-setion h2{
+    margin: 0 0 30px;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+}
