--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     background: url('./bg.jpg') no-repeat center center/cover;
     background-size: cover;
     background-position: top center;
+    height: 100vh;
 
 }
 body::before{
@@ -30,14 +31,20 @@ body::before{
     position: relative;
     width: 400px;
     padding: 40px;
-    background: rgba(0,0,0,.7);
+    background: #34495E;
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.5);
+    box-shadow: 0 15px 25px ;
     border-radius: 10px;
+    margin-top: 10px;
+    height: 300px; 
+    transition: all 0.5s;
 }
-.contact-setion h2{
-    margin: 0 0 30px;
-    padding: 0;
+.contact-setion h1{
+    margin-bottom: 30px;
+    font-weight: 500;
     color: #fff;
     text-align: center;
+}
+.contact-setion :hover{
+    transform: scale(1.03);
 }
