--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body::before{
     box-shadow: 0 15px 25px ;
     border-radius: 10px;
     margin-top: 10px;
-    height: 500px; 
+    height: 550px; 
     transition: all 0.8s;
 }
 /*heading*/
@@ -82,6 +82,19 @@ transition: all 0.5s;
 textarea{
     resize: none;
     hieght: 100px;
+}
+.c-btn{
+    width: 100%;
+    height: 5vh;
+    font-size:1rem ;
+    margin-top: 30px;
+    background: #e74c3c;
+    color: #ecf0f1;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
 }
 /*
 .contact-form .input-box{
